@@ -10,6 +10,7 @@ import it.pagopa.selfcare.pagopa.backoffice.entity.TavoloOpEntity;
 import it.pagopa.selfcare.pagopa.backoffice.exception.AppException;
 import it.pagopa.selfcare.pagopa.backoffice.model.connector.broker.BrokerDetails;
 import it.pagopa.selfcare.pagopa.backoffice.model.connector.broker.Brokers;
+import it.pagopa.selfcare.pagopa.backoffice.model.connector.creditorinstitution.ApiConfigCreditorInstitutionsOrderBy;
 import it.pagopa.selfcare.pagopa.backoffice.model.connector.creditorinstitution.AvailableCodes;
 import it.pagopa.selfcare.pagopa.backoffice.model.connector.creditorinstitution.CreditorInstitutionDetails;
 import it.pagopa.selfcare.pagopa.backoffice.model.connector.creditorinstitution.CreditorInstitutions;
@@ -24,6 +25,7 @@ import it.pagopa.selfcare.pagopa.backoffice.model.creditorinstituions.CreditorIn
 import it.pagopa.selfcare.pagopa.backoffice.model.creditorinstituions.CreditorInstitutionStationEditResource;
 import it.pagopa.selfcare.pagopa.backoffice.model.creditorinstituions.CreditorInstitutionsResource;
 import it.pagopa.selfcare.pagopa.backoffice.model.creditorinstituions.UpdateCreditorInstitutionDto;
+import it.pagopa.selfcare.pagopa.backoffice.model.creditorinstituions.client.CreditorInstitutionInfo;
 import it.pagopa.selfcare.pagopa.backoffice.model.institutions.DelegationExternal;
 import it.pagopa.selfcare.pagopa.backoffice.model.institutions.InstitutionResponse;
 import it.pagopa.selfcare.pagopa.backoffice.model.institutions.SelfcareProductUser;
@@ -37,6 +39,7 @@ import org.junit.jupiter.params.provider.CsvSource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.data.domain.Sort;
 
 import java.io.IOException;
 import java.util.ArrayList;
@@ -51,12 +54,17 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -68,6 +76,7 @@ class CreditorInstitutionServiceTest {
     private static final String STATION_CODE = "stationCode";
     private static final String CI_TAX_CODE_1 = "12345677";
     private static final String CI_TAX_CODE_2 = "12345666";
+
     @MockBean
     private ApiConfigClient apiConfigClient;
 
@@ -85,10 +94,49 @@ class CreditorInstitutionServiceTest {
 
     @Test
     void getCreditorInstitutions_ok() throws IOException {
-        when(apiConfigClient.getCreditorInstitutions(anyInt(), anyInt(), anyString(), anyString(), anyString()))
+        when(apiConfigClient.getCreditorInstitutions(anyString(), anyString(), anyBoolean(), any(), any(), anyInt(), anyInt()))
                 .thenReturn(TestUtil.fileToObject("response/apiconfig/get_creditor_institutions_ok.json", CreditorInstitutions.class));
 
-        CreditorInstitutionsResource result = service.getCreditorInstitutions(50, 0, "12345", "comune", "asc");
+        CreditorInstitutionsResource result =
+                assertDoesNotThrow(() ->
+                        service.getCreditorInstitutions(
+                                "12345",
+                                "comune",
+                                true,
+                                ApiConfigCreditorInstitutionsOrderBy.NAME,
+                                Sort.Direction.ASC,
+                                50,
+                                0
+                        ));
+
+        assertNotNull(result);
+        assertNotNull(result.getCreditorInstitutionList());
+        assertFalse(result.getCreditorInstitutionList().isEmpty());
+    }
+
+    @Test
+    void getCreditorInstitutions_ok_without_filters() throws IOException {
+        when(apiConfigClient.getCreditorInstitutions(
+                eq(null),
+                eq(null),
+                eq(null),
+                eq(ApiConfigCreditorInstitutionsOrderBy.NAME),
+                eq(Sort.Direction.ASC.name()),
+                anyInt(),
+                anyInt()
+        )).thenReturn(TestUtil.fileToObject("response/apiconfig/get_creditor_institutions_ok.json", CreditorInstitutions.class));
+
+        CreditorInstitutionsResource result =
+                assertDoesNotThrow(() ->
+                        service.getCreditorInstitutions(
+                                null,
+                                null,
+                                null,
+                                ApiConfigCreditorInstitutionsOrderBy.NAME,
+                                Sort.Direction.ASC,
+                                50,
+                                0
+                        ));
 
         assertNotNull(result);
         assertNotNull(result.getCreditorInstitutionList());
@@ -98,10 +146,21 @@ class CreditorInstitutionServiceTest {
     @Test
     void getCreditorInstitutions_ko() {
         FeignException feignException = mock(FeignException.InternalServerError.class);
-        when(apiConfigClient.getCreditorInstitutions(anyInt(), anyInt(), anyString(), anyString(), anyString()))
+        when(apiConfigClient.getCreditorInstitutions(anyString(), anyString(), anyBoolean(), any(), any(), anyInt(), anyInt()))
                 .thenThrow(feignException);
 
-        assertThrows(FeignException.class, () -> service.getCreditorInstitutions(50, 0, "12345", "comune", "asc"));
+        FeignException e = assertThrows(FeignException.class,
+                () -> service.getCreditorInstitutions(
+                        "12345",
+                        "comune",
+                        true,
+                        ApiConfigCreditorInstitutionsOrderBy.NAME,
+                        Sort.Direction.ASC,
+                        50,
+                        0
+                ));
+
+        assertNotNull(e);
     }
 
     @Test
@@ -346,21 +405,31 @@ class CreditorInstitutionServiceTest {
     }
 
     @Test
-    void getAvailableCreditorInstitutionsForStationSuccessWithoutAddItselfToDelegationsAndPSPDelegationFiltered() {
+    void getAvailableCreditorInstitutionsForStationSuccessWithoutAddingItselfToDelegationsAndPSPDelegationFiltered() {
         DelegationExternal expectedCI = buildDelegation("PA", CI_TAX_CODE_2);
         List<DelegationExternal> delegations = new ArrayList<>();
         delegations.add(buildDelegation("PSP", "12345678"));
         delegations.add(expectedCI);
         InstitutionResponse institutionResponse = buildInstitutionResponse(InstitutionType.PSP, "1234");
 
-        when(externalApiClient.getBrokerDelegation(null, BROKER_ID, "prod-pagopa", "FULL"))
-                .thenReturn(delegations);
+        when(externalApiClient.getBrokerDelegation(
+                null,
+                BROKER_ID,
+                "prod-pagopa",
+                "FULL",
+                null)
+        ).thenReturn(delegations);
         when(externalApiClient.getInstitution(BROKER_ID)).thenReturn(institutionResponse);
-        when(apiConfigSelfcareIntegrationClient.getStationCreditorInstitutions(STATION_CODE))
-                .thenReturn(Collections.singletonList("1234"));
+        when(apiConfigSelfcareIntegrationClient.getStationCreditorInstitutions(eq(STATION_CODE), anyList()))
+                .thenReturn(Collections.singletonList(
+                        CreditorInstitutionInfo.builder()
+                                .ciTaxCode(expectedCI.getTaxCode())
+                                .businessName(expectedCI.getInstitutionName())
+                                .build())
+                );
 
         CreditorInstitutionInfoResource result = assertDoesNotThrow(() ->
-                service.getAvailableCreditorInstitutionsForStation(STATION_CODE, BROKER_ID));
+                service.getAvailableCreditorInstitutionsForStation(STATION_CODE, BROKER_ID, null));
 
         assertNotNull(result);
         assertNotNull(result.getCreditorInstitutionInfos());
@@ -371,21 +440,35 @@ class CreditorInstitutionServiceTest {
     }
 
     @Test
-    void getAvailableCreditorInstitutionsForStationSuccessWithAddItselfToDelegationsAndPSPDelegationFiltered() {
+    void getAvailableCreditorInstitutionsForStationSuccessWithAddingItselfToDelegationsAndPSPDelegationFiltered() {
         DelegationExternal expectedCI = buildDelegation("PA", CI_TAX_CODE_2);
         List<DelegationExternal> delegations = new ArrayList<>();
         delegations.add(buildDelegation("PSP", "12345678"));
         delegations.add(expectedCI);
         InstitutionResponse institutionResponse = buildInstitutionResponse(InstitutionType.PA, "1234");
 
-        when(externalApiClient.getBrokerDelegation(null, BROKER_ID, "prod-pagopa", "FULL"))
-                .thenReturn(delegations);
+        when(externalApiClient.getBrokerDelegation(
+                null,
+                BROKER_ID,
+                "prod-pagopa",
+                "FULL",
+                null)
+        ).thenReturn(delegations);
         when(externalApiClient.getInstitution(BROKER_ID)).thenReturn(institutionResponse);
-        when(apiConfigSelfcareIntegrationClient.getStationCreditorInstitutions(STATION_CODE))
-                .thenReturn(Collections.singletonList("00000"));
+        when(apiConfigSelfcareIntegrationClient.getStationCreditorInstitutions(eq(STATION_CODE), anyList()))
+                .thenReturn(List.of(
+                        CreditorInstitutionInfo.builder()
+                                .ciTaxCode(expectedCI.getTaxCode())
+                                .businessName(expectedCI.getInstitutionName())
+                                .build(),
+                        CreditorInstitutionInfo.builder()
+                                .ciTaxCode(institutionResponse.getTaxCode())
+                                .businessName(institutionResponse.getDescription())
+                                .build())
+                );
 
         CreditorInstitutionInfoResource result = assertDoesNotThrow(() ->
-                service.getAvailableCreditorInstitutionsForStation(STATION_CODE, BROKER_ID));
+                service.getAvailableCreditorInstitutionsForStation(STATION_CODE, BROKER_ID, null));
 
         assertNotNull(result);
         assertNotNull(result.getCreditorInstitutionInfos());
@@ -393,63 +476,27 @@ class CreditorInstitutionServiceTest {
     }
 
     @Test
-    void getAvailableCreditorInstitutionsForStationSuccessWithoutAddItselfToDelegationsAndCIAlreadyAssociatedFiltered() {
-        DelegationExternal expectedCI = buildDelegation("PA", CI_TAX_CODE_2);
-        List<DelegationExternal> delegations = List.of(buildDelegation("SCP", CI_TAX_CODE_1), expectedCI);
-        InstitutionResponse institutionResponse = buildInstitutionResponse(InstitutionType.PSP, "1234");
-
-        when(externalApiClient.getBrokerDelegation(null, BROKER_ID, "prod-pagopa", "FULL"))
-                .thenReturn(delegations);
-        when(externalApiClient.getInstitution(BROKER_ID)).thenReturn(institutionResponse);
-        when(apiConfigSelfcareIntegrationClient.getStationCreditorInstitutions(STATION_CODE))
-                .thenReturn(Collections.singletonList(CI_TAX_CODE_1));
-
-        CreditorInstitutionInfoResource result = assertDoesNotThrow(() ->
-                service.getAvailableCreditorInstitutionsForStation(STATION_CODE, BROKER_ID));
-
-        assertNotNull(result);
-        assertNotNull(result.getCreditorInstitutionInfos());
-        assertEquals(1, result.getCreditorInstitutionInfos().size());
-
-        assertEquals(expectedCI.getInstitutionName(), result.getCreditorInstitutionInfos().get(0).getBusinessName());
-        assertEquals(expectedCI.getTaxCode(), result.getCreditorInstitutionInfos().get(0).getCiTaxCode());
-    }
-
-    @Test
-    void getAvailableCreditorInstitutionsForStationSuccessWithAddItselfToDelegationsAndCIAlreadyAssociatedFiltered() {
-        DelegationExternal expectedCI = buildDelegation("PA", CI_TAX_CODE_2);
-        List<DelegationExternal> delegations = List.of(buildDelegation("SCP", CI_TAX_CODE_1), expectedCI);
-        InstitutionResponse institutionResponse = buildInstitutionResponse(InstitutionType.PSP, CI_TAX_CODE_1);
-
-        when(externalApiClient.getBrokerDelegation(null, BROKER_ID, "prod-pagopa", "FULL"))
-                .thenReturn(delegations);
-        when(externalApiClient.getInstitution(BROKER_ID)).thenReturn(institutionResponse);
-        when(apiConfigSelfcareIntegrationClient.getStationCreditorInstitutions(STATION_CODE))
-                .thenReturn(Collections.singletonList(CI_TAX_CODE_1));
-
-        CreditorInstitutionInfoResource result = assertDoesNotThrow(() ->
-                service.getAvailableCreditorInstitutionsForStation(STATION_CODE, BROKER_ID));
-
-        assertNotNull(result);
-        assertNotNull(result.getCreditorInstitutionInfos());
-        assertEquals(1, result.getCreditorInstitutionInfos().size());
-
-        assertEquals(expectedCI.getInstitutionName(), result.getCreditorInstitutionInfos().get(0).getBusinessName());
-        assertEquals(expectedCI.getTaxCode(), result.getCreditorInstitutionInfos().get(0).getCiTaxCode());
-    }
-
-    @Test
-    void getAvailableCreditorInstitutionsForStationSuccessWithAddItselfToDelegations() {
+    void getAvailableCreditorInstitutionsForStationSuccessOnlyWithAddItselfToDelegations() {
         InstitutionResponse institutionResponse = buildInstitutionResponse(InstitutionType.PA, "1234");
 
-        when(externalApiClient.getBrokerDelegation(null, BROKER_ID, "prod-pagopa", "FULL"))
-                .thenReturn(Collections.emptyList());
+        when(externalApiClient.getBrokerDelegation(
+                null,
+                BROKER_ID,
+                "prod-pagopa",
+                "FULL",
+                null)
+        ).thenReturn(new ArrayList<>());
         when(externalApiClient.getInstitution(BROKER_ID)).thenReturn(institutionResponse);
-        when(apiConfigSelfcareIntegrationClient.getStationCreditorInstitutions(STATION_CODE))
-                .thenReturn(Collections.emptyList());
+        when(apiConfigSelfcareIntegrationClient.getStationCreditorInstitutions(eq(STATION_CODE), anyList()))
+                .thenReturn(Collections.singletonList(
+                        CreditorInstitutionInfo.builder()
+                                .ciTaxCode(institutionResponse.getTaxCode())
+                                .businessName(institutionResponse.getDescription())
+                                .build())
+                );
 
         CreditorInstitutionInfoResource result = assertDoesNotThrow(() ->
-                service.getAvailableCreditorInstitutionsForStation(STATION_CODE, BROKER_ID));
+                service.getAvailableCreditorInstitutionsForStation(STATION_CODE, BROKER_ID, null));
 
         assertNotNull(result);
         assertNotNull(result.getCreditorInstitutionInfos());
@@ -467,18 +514,109 @@ class CreditorInstitutionServiceTest {
         );
         InstitutionResponse institutionResponse = buildInstitutionResponse(InstitutionType.SCP, CI_TAX_CODE_1);
 
-        when(externalApiClient.getBrokerDelegation(null, BROKER_ID, "prod-pagopa", "FULL"))
-                .thenReturn(delegations);
+        when(externalApiClient.getBrokerDelegation(
+                null,
+                BROKER_ID,
+                "prod-pagopa",
+                "FULL",
+                null)
+        ).thenReturn(delegations);
         when(externalApiClient.getInstitution(BROKER_ID)).thenReturn(institutionResponse);
-        when(apiConfigSelfcareIntegrationClient.getStationCreditorInstitutions(STATION_CODE))
-                .thenReturn(Collections.emptyList());
+        when(apiConfigSelfcareIntegrationClient.getStationCreditorInstitutions(eq(STATION_CODE), anyList()))
+                .thenReturn(List.of(
+                        CreditorInstitutionInfo.builder()
+                                .ciTaxCode(delegations.get(0).getTaxCode())
+                                .businessName(delegations.get(0).getInstitutionName())
+                                .build(),
+                        CreditorInstitutionInfo.builder()
+                                .ciTaxCode(delegations.get(1).getTaxCode())
+                                .businessName(delegations.get(1).getInstitutionName())
+                                .build())
+                );
 
         CreditorInstitutionInfoResource result = assertDoesNotThrow(() ->
-                service.getAvailableCreditorInstitutionsForStation(STATION_CODE, BROKER_ID));
+                service.getAvailableCreditorInstitutionsForStation(STATION_CODE, BROKER_ID, null));
 
         assertNotNull(result);
         assertNotNull(result.getCreditorInstitutionInfos());
         assertEquals(2, result.getCreditorInstitutionInfos().size());
+    }
+
+    @Test
+    void getAvailableCreditorInstitutionsForStationSuccessWithFilterNoResults() {
+        InstitutionResponse institutionResponse = buildInstitutionResponse(InstitutionType.SCP, CI_TAX_CODE_1);
+
+        when(externalApiClient.getBrokerDelegation(
+                null,
+                BROKER_ID,
+                "prod-pagopa",
+                "FULL",
+                "EC")
+        ).thenReturn(new ArrayList<>());
+        when(externalApiClient.getInstitution(BROKER_ID)).thenReturn(institutionResponse);
+
+        CreditorInstitutionInfoResource result = assertDoesNotThrow(() ->
+                service.getAvailableCreditorInstitutionsForStation(STATION_CODE, BROKER_ID, "EC"));
+
+        assertNotNull(result);
+        assertNotNull(result.getCreditorInstitutionInfos());
+        assertTrue(result.getCreditorInstitutionInfos().isEmpty());
+
+        verify(apiConfigSelfcareIntegrationClient, never()).getStationCreditorInstitutions(eq(STATION_CODE), anyList());
+    }
+
+    @Test
+    void getAvailableCreditorInstitutionsForStationSuccessWithNoCIAvailable() {
+        List<DelegationExternal> delegations = List.of(
+                buildDelegation("SCP", CI_TAX_CODE_1),
+                buildDelegation("PA", CI_TAX_CODE_2)
+        );
+        InstitutionResponse institutionResponse = buildInstitutionResponse(InstitutionType.SCP, CI_TAX_CODE_1);
+
+        when(externalApiClient.getBrokerDelegation(
+                null,
+                BROKER_ID,
+                "prod-pagopa",
+                "FULL",
+                null)
+        ).thenReturn(delegations);
+        when(externalApiClient.getInstitution(BROKER_ID)).thenReturn(institutionResponse);
+        when(apiConfigSelfcareIntegrationClient.getStationCreditorInstitutions(eq(STATION_CODE), anyList()))
+                .thenReturn(Collections.emptyList());
+
+        CreditorInstitutionInfoResource result = assertDoesNotThrow(() ->
+                service.getAvailableCreditorInstitutionsForStation(STATION_CODE, BROKER_ID, null));
+
+        assertNotNull(result);
+        assertNotNull(result.getCreditorInstitutionInfos());
+        assertTrue(result.getCreditorInstitutionInfos().isEmpty());
+    }
+
+    @Test
+    void getAvailableCreditorInstitutionsForStationSuccessAllPSPDelegations() {
+        List<DelegationExternal> delegations = List.of(
+                buildDelegation("PSP", CI_TAX_CODE_1),
+                buildDelegation("PSP", CI_TAX_CODE_2)
+        );
+        InstitutionResponse institutionResponse = buildInstitutionResponse(InstitutionType.PSP, CI_TAX_CODE_1);
+
+        when(externalApiClient.getBrokerDelegation(
+                null,
+                BROKER_ID,
+                "prod-pagopa",
+                "FULL",
+                null)
+        ).thenReturn(delegations);
+        when(externalApiClient.getInstitution(BROKER_ID)).thenReturn(institutionResponse);
+
+        CreditorInstitutionInfoResource result = assertDoesNotThrow(() ->
+                service.getAvailableCreditorInstitutionsForStation(STATION_CODE, BROKER_ID, null));
+
+        assertNotNull(result);
+        assertNotNull(result.getCreditorInstitutionInfos());
+        assertTrue(result.getCreditorInstitutionInfos().isEmpty());
+
+        verify(apiConfigSelfcareIntegrationClient, never()).getStationCreditorInstitutions(eq(STATION_CODE), anyList());
     }
 
     private TavoloOpEntity buildTavoloOpEntity() {
